--- a/app/src/main/res/layout/expended_header.xml
+++ b/app/src/main/res/layout/expended_header.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="2dp"
     app:cardCornerRadius="2dp"
@@ -37,7 +37,7 @@
 
     <TextView
         android:id="@+id/tv_header"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
