--- a/app/src/main/res/layout/item_description_list_item.xml
+++ b/app/src/main/res/layout/item_description_list_item.xml
@@ -31,7 +31,7 @@
             >
 
             <TextView
-                android:id="@+id/blob_descriptor_source"
+                android:id="@+id/blob_descriptor_group"
                 style="@android:style/TextAppearance.Holo.SearchResult.Subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,13 +40,13 @@
                 android:text="confectionary and diary" />
 
             <TextView
-                android:id="@+id/blob_descriptor_timestamp"
+                android:id="@+id/blob_descriptor_source"
                 style="@android:style/TextAppearance.Holo.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:paddingLeft="6dp"
-                android:text="1 day ago"
+                android:text="USDA"
                 android:textStyle="italic" />
         </LinearLayout>
     </LinearLayout>
